star alignment fixed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -51,5 +51,7 @@
    height: 220px;
    background-image: url(/public/img/spaceLogo.png);
    background-repeat: no-repeat;
-   background-color: white
+   background-color: white;
+   display: block;
+   margin: 10px auto;
 }
